--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <header class="navbar">
       <div class="container navbar-container">
         <div class="brand">
-          <a href="/dravidian-codemix-2025/"></a>
-          <img src="/images/dravidian-code-mixed-logo.png" alt="DravidianCodeMix Logo" class="logo-img" />
+          <a href="https://dravidian-codemix.github.io/2025/index.html"></a>
+          <img src="images/dravidian-code-mixed-logo.png" alt="DravidianCodeMix Logo" class="logo-img" />
           <h1 class="site-title">DravidianCodeMix 2025</h1>
         </div>
         <nav class="nav-menu">
@@ -64,10 +64,10 @@
 
             <!-- Logos -->
             <div class="footer-logos">
-              <img id="logo1" src="/images/insight-logo.jpeg" alt="Logo 1" />
-              <img id="logo2" src="/images/sfi-logo.svg" alt="Logo 2" />
-              <img id="logo3" src="/images/iiitmk.jpeg" alt="Logo 3" />
-              <img id="logo4" src="/images/Cardiff_University_logo_logotype-700x673.png" alt="Logo 4" />
+              <img id="logo1" src="images/insight-logo.jpeg" alt="Logo 1" />
+              <img id="logo2" src="images/sfi-logo.svg" alt="Logo 2" />
+              <img id="logo3" src="images/iiitmk.jpeg" alt="Logo 3" />
+              <img id="logo4" src="images/Cardiff_University_logo_logotype-700x673.png" alt="Logo 4" />
             </div>
 
             <!-- Copyright -->
