--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     <header class="navbar">
       <div class="container navbar-container">
         <div class="brand">
-          <a href="https://dravidian-codemix.github.io/2025/"></a>
-          <img src="images/dravidian-code-mixed-logo.png" alt="DravidianCodeMix Logo" class="logo-img" />
+          <a href="https://dravidian-codemix.github.io/2025/">
+           <img src="images/dravidian-code-mixed-logo.png" alt="DravidianCodeMix Logo" class="logo-img" />
+          </a>
           <h1 class="site-title">DravidianCodeMix 2025</h1>
         </div>
         <nav class="nav-menu">
