Changed the four university logos and renamed the galway logo

--- a/index.html
+++ b/index.html
@@ -65,20 +65,22 @@
 
             <!-- Logos -->
             <div class="footer-logos">
-              <!-- <img id="logo1" src="images/insight-logo.jpeg" alt="Logo 1" /> -->
-              <img id="logo2" src="images/sfi-logo.svg" alt="Logo 2" />
-              <img id="logo3" src="images/iiitmk.jpeg" alt="Logo 3" />
-              <img id="logo4" src="images/Cardiff_University_logo_logotype-700x673.png" alt="Logo 4" />
+              <img id="logo1" src="images/university_of_galway.png" alt="Logo 1" />
+              <img id="logo2" src="images/Sri_Sivasubramaniya_Nadar_College_of_Engineering.svg.png" alt="Logo 2" />
+              <img id="logo3" src="images/SRM_Institute_of_Science_and_Technology_Logo.svg.png" alt="Logo 3" />
+              <img id="logo4" src="images/Yenepoya.png" alt="Logo 4" />
             </div>
 
             <!-- Copyright -->
             <p class="footer-copy">
               © 2025 DravidianCodeMix Track. All rights reserved.
             </p>
+
           </div>
         </footer>
+      </div>
     </footer>
-
+  </header>
 </body>
 
 </html>
