--- a/dates.html
+++ b/dates.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang='en'>
+<!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -102,5 +102,8 @@
         </p>
       </div>
     </footer>
+  </div>
 </footer>
-</body></html>
+<!-- </body> -->
+</header>
+</html>
