organizers image added

--- a/organizers.html
+++ b/organizers.html
@@ -36,11 +36,11 @@
   <h2>Organizers Details</h2>
   <ul>
     <li>
-      <img src="images/bharathi-raja.jpg" alt="Bharathi Raja Chakravarthi">
+      <img src="images/bharathiraja.jpg" alt="Bharathi Raja Chakravarthi">
       <p><a href="#">Bharathi Raja Chakravarthi</a><br><small>University of Galway, Ireland</small></p>
     </li>
     <li>
-      <img src="images/sripriya.jpg" alt="Sripriya N">
+      <img src="images/Sripriya.jpeg" alt="Sripriya N">
       <p><a href="#">Sripriya N</a><br><small>SSN College of Engineering, Tamil Nadu, India</small></p>
     </li>
     <li>
@@ -48,7 +48,7 @@
       <p><a href="#">Thenmozhi D</a><br><small>SSN College of Engineering, Tamil Nadu, India</small></p>
     </li>
     <li>
-      <img src="images/bharathi-b.jpg" alt="Bharathi B">
+      <img src="images/bharathi.jpg" alt="Bharathi B">
       <p><a href="#">Bharathi B</a><br><small>SSN College of Engineering, Tamil Nadu, India</small></p>
     </li>
     <li>
@@ -56,15 +56,15 @@
       <p><a href="#">Prasanna Kumar Kumaresan</a><br><small>University of Galway, Ireland</small></p>
     </li>
     <li>
-      <img src="images/subalalitha.jpg" alt="Subalalitha">
+      <img src="images/Subalalitha.jpg" alt="Subalalitha">
       <p><a href="#">Subalalitha</a><br><small>SRMIST, Tamil Nadu, India</small></p>
     </li>
     <li>
-      <img src="images/anusha.jpg" alt="Anusha M D">
+      <img src="images/Anusha.jpg" alt="Anusha M D">
       <p><a href="#">Anusha M D</a><br><small>YIASCM, Yenepoya (Deemed to be University), Mangalore, India</small></p>
     </li>
     <li>
-      <img src="images/parameshwar.jpg" alt="Parameshwar R. Hegde">
+      <img src="images/Parameshwar_R_Hegde.jpg" alt="Parameshwar R. Hegde">
       <p><a href="#">Parameshwar R. Hegde</a><br><small>YIASCM, Yenepoya (Deemed to be University), Mangalore, India</small></p>
     </li>
     <li>
