--- a/overview.html
+++ b/overview.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang='en'>
+<!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -112,5 +112,7 @@
         </p>
       </div>
     </footer>
+  </div>
 </footer>
+</header>
 </html>
