--- a/submission.html
+++ b/submission.html
@@ -18,7 +18,7 @@
       <a href="dataset.html">Dataset</a>
       <a href="dates.html">Timeline</a>
       <a href="organizers.html">Organizers</a>
-      <a href="submission.htmls">Submission</a>
+      <a href="submission.html">Submission</a>
       <div class="dropdown">
         <a href="#" class="dropbtn">Previous Year</a>
         <div class="dropdown-content">
@@ -36,11 +36,10 @@
   <div class="container">
     <h4 class="section-title">Paper Submission</h4>
     <p>
-      The paper (Sentiment Analysis for Dravidian Languages in Code-Mixed Text) name format should be:<br>
-      <strong>TEAM_NAME@Dravidian-CodeMix-FIRE2020: Title of the paper</strong>.<br>
-      For example: <em>NUIG_ULD@Dravidian-CodeMix-FIRE2020: Sentiment Analysis on Multilingual Code Mixing Text</em>.
+      <p>The paper (Sentiment Analysis for Dravidian Languages in Code-Mixed Text) name format should be:</p><br>
+      <strong>TEAM_NAME@Dravidian-CodeMix-FIRE2020: Title of the paper.</strong><br>
+      <p>For example:NUIG_ULD@Dravidian-CodeMix-FIRE2020: Sentiment Analysis on Multilingual Code Mixing Text.</p>
     </p>
-
     <h1 class="subheading">General Guidelines:</h1>
     <ul class="submission-guidelines">
       <li>Basic sanity check for grammatical errors and reported results.</li>
@@ -56,13 +55,15 @@
       <li>All submissions should be in <strong>Single Column CEUR format</strong>. Use one of the templates below:</li>
     </ul>
 
-    <div class="template-links">
-      <p><strong>Templates:</strong></p>
-      <ul>
-        <li><a href="https://www.overleaf.com/read/gwhxnqcghhdt" target="_blank">Overleaf Template</a></li>
-        <li><a href="#" target="_blank">Paper Submission</a></li>
-      </ul>
-    </div>
+   <div class="template-links">
+  <p><strong>Templates:</strong></p>
+  <ul>
+    <li><a href="https://www.overleaf.com/read/gwhxnqcghhdt" target="_blank">Overleaf Template</a></li>
+    <li><hr style="margin: 5px 0;"></li>
+    <li><a href="#" target="_blank">Paper Submission</a></li>
+  </ul>
+</div>
+
 
     <p class="note">
       <em>Note:</em> Apart from plagiarism concerns, we generally do not reject papers.
