--- a/submission.html
+++ b/submission.html
@@ -33,13 +33,14 @@
   </div>
 </header>
 <section class="submission">
-  <div class="container">
+    <div class="container">
     <h4 class="section-title">Paper Submission</h4>
     <p>
-      <p>The paper (Sentiment Analysis for Dravidian Languages in Code-Mixed Text) name format should be:</p><br>
-      <strong>TEAM_NAME@Dravidian-CodeMix-FIRE2020: Title of the paper.</strong><br>
-      <p>For example:NUIG_ULD@Dravidian-CodeMix-FIRE2020: Sentiment Analysis on Multilingual Code Mixing Text.</p>
+      The paper (Sentiment Analysis for Dravidian Languages in Code-Mixed Text) name format should be:<br>
+      <strong>TEAM_NAME@Dravidian-CodeMix-FIRE2020: Title of the paper</strong>.<br>
+      For example:NUIG_ULD@Dravidian-CodeMix-FIRE2020: Sentiment Analysis on Multilingual Code Mixing Text.
     </p>
+  </div>
     <h1 class="subheading">General Guidelines:</h1>
     <ul class="submission-guidelines">
       <li>Basic sanity check for grammatical errors and reported results.</li>
@@ -59,12 +60,10 @@
   <p><strong>Templates:</strong></p>
   <ul>
     <li><a href="https://www.overleaf.com/read/gwhxnqcghhdt" target="_blank">Overleaf Template</a></li>
-    <li><hr style="margin: 5px 0;"></li>
+    <li class="divider"></li>
     <li><a href="#" target="_blank">Paper Submission</a></li>
   </ul>
 </div>
-
-
     <p class="note">
       <em>Note:</em> Apart from plagiarism concerns, we generally do not reject papers.
     </p>
