--- a/submission.html
+++ b/submission.html
@@ -1,17 +1,19 @@
-<!DOCTYPE html><html lang='en'>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Proceedings | Dravidian 2025</title>
   <link rel="stylesheet" href="style.css" />
 </head>
+<body>
+
 <header class="navbar">
-  <header class="navbar">
-    <div class="container navbar-container">
-      <div class="brand">
-        <img src="images/dravidian-code-mixed-logo.png" alt="DravidianCodeMix Logo" class="logo-img" />
-        <h1 class="site-title">DravidianCodeMix 2025</h1>
-      </div> 
+  <div class="container navbar-container">
+    <div class="brand">
+      <img src="images/dravidian-code-mixed-logo.png" alt="DravidianCodeMix Logo" class="logo-img" />
+      <h1 class="site-title">DravidianCodeMix 2025</h1>
+    </div> 
     <nav class="nav-menu">
       <a href="overview.html">Overview</a>
       <a href="keynote.html">Keynote</a>
@@ -32,15 +34,16 @@
     </nav>
   </div>
 </header>
+
 <section class="submission">
-    <div class="container">
+  <div class="container">
     <h4 class="section-title">Paper Submission</h4>
     <p>
       The paper (Sentiment Analysis for Dravidian Languages in Code-Mixed Text) name format should be:<br>
       <strong>TEAM_NAME@Dravidian-CodeMix-FIRE2020: Title of the paper</strong>.<br>
-      For example:NUIG_ULD@Dravidian-CodeMix-FIRE2020: Sentiment Analysis on Multilingual Code Mixing Text.
+      For example: NUIG_ULD@Dravidian-CodeMix-FIRE2020: Sentiment Analysis on Multilingual Code Mixing Text.
     </p>
-  </div>
+
     <h1 class="subheading">General Guidelines:</h1>
     <ul class="submission-guidelines">
       <li>Basic sanity check for grammatical errors and reported results.</li>
@@ -49,50 +52,66 @@
       <li>Check papers for text reuse/plagiarism, including self-plagiarism — CEUR is strict about this.</li>
       <li><strong>Only one working note per team is allowed</strong> (merge multiple task submissions into one).</li>
       <li>Do not include salutations like Dr., Prof., etc., in author names.</li>
-      <li>Each paper must include a copyright clause.
+      <li>Each paper must include a copyright clause
         (<a href="http://ceur-ws.org/HOWTOSUBMIT.html" target="_blank">See Author Agreement Variants</a>)
       </li>
       <li>Each author must submit a signed copyright agreement (template will be provided).</li>
       <li>All submissions should be in <strong>Single Column CEUR format</strong>. Use one of the templates below:</li>
     </ul>
 
-   <div class="template-links">
-  <p><strong>Templates:</strong></p>
-  <ul>
-    <li><a href="https://www.overleaf.com/read/gwhxnqcghhdt" target="_blank">Overleaf Template</a></li>
-    <li><a href="#" target="_blank">Paper Submission</a></li>
-  </ul>
-</div>
+    <div class="template-links">
+      <p><strong>Templates:</strong></p>
+      <ul>
+        <li><a href="https://www.overleaf.com/read/gwhxnqcghhdt" target="_blank">Overleaf Template</a></li>
+        <li class="separator">• • •</li>
+        <li><a href="#" target="_blank">Paper Submission</a></li>
+      </ul>
+    </div>
+
     <p class="note">
       <em>Note:</em> Apart from plagiarism concerns, we generally do not reject papers.
     </p>
   </div>
 </section>
+
 <footer class="footer">
   <div class="container footer-container">
-    <!-- Logos -->
-    <footer class="footer">
-      <div class="container footer-container">
-        <!-- Emails -->
-        <div class="footer-emails">
-          <p>Email:</p>
-          <a href="mailto:dravidiancodemixed@gmail.com">dravidiancodemixed@gmail.com</a> |
-          <a href="mailto:bharathiraja.akr@gmail.com">bharathiraja.akr@gmail.com</a>
-        </div>
 
-        <!-- Logos -->
-        <div class="footer-logos">
-          <img id="logo1" src="images/university_of_galway.png" alt="Logo 1" />
-          <img id="logo2" src="images/Sri_Sivasubramaniya_Nadar_College_of_Engineering.svg.png" alt="Logo 2" />
-          <img id="logo3" src="images/SRM_Institute_of_Science_and_Technology_Logo.svg.png" alt="Logo 3" />
-          <img id="logo4" src="images/Yenepoya.png" alt="Logo 4" />
-        </div>
+    <div class="footer-emails">
+      <p>Email:</p>
+      <a href="mailto:dravidiancodemixed@gmail.com">dravidiancodemixed@gmail.com</a> |
+      <a href="mailto:bharathiraja.akr@gmail.com">bharathiraja.akr@gmail.com</a>
+    </div>
 
-        <!-- Copyright -->
-        <p class="footer-copy">
-          © 2025 DravidianCodeMix Track. All rights reserved.
-        </p>
-      </div>
-    </footer>
+    <div class="footer-logos">
+      <img id="logo1" src="images/university_of_galway.png" alt="Logo 1" />
+      <img id="logo2" src="images/Sri_Sivasubramaniya_Nadar_College_of_Engineering.svg.png" alt="Logo 2" />
+      <img id="logo3" src="images/SRM_Institute_of_Science_and_Technology_Logo.svg.png" alt="Logo 3" />
+      <img id="logo4" src="images/Yenepoya.png" alt="Logo 4" />
+    </div>
+
+    <p class="footer-copy">
+      © 2025 DravidianCodeMix Track. All rights reserved.
+    </p>
+  </div>
 </footer>
-</body></html>
+
+<style>
+  .template-links ul {
+    list-style-type: none;
+    padding: 0;
+  }
+
+  .template-links li {
+    margin: 6px 0;
+  }
+
+  .separator {
+    text-align: center;
+    color: #999;
+    pointer-events: none;
+  }
+</style>
+
+</body>
+</html>
