--- a/submission.html
+++ b/submission.html
@@ -57,17 +57,7 @@
       </li>
       <li>Each author must submit a signed copyright agreement (template will be provided).</li>
       <li>All submissions should be in <strong>Single Column CEUR format</strong>. Use one of the templates below:</li>
-    </ul>
-
-    <div class="template-links">
-      <p><strong>Templates:</strong></p>
-      <ul>
-        <li><a href="https://www.overleaf.com/read/gwhxnqcghhdt" target="_blank">Overleaf Template</a></li>
-        <li class="separator">• • •</li>
-        <li><a href="#" target="_blank">Paper Submission</a></li>
-      </ul>
-    </div>
-
+    </ul>   
     <p class="note">
       <em>Note:</em> Apart from plagiarism concerns, we generally do not reject papers.
     </p>
@@ -95,23 +85,13 @@
     </p>
   </div>
 </footer>
-
 <style>
-  .template-links ul {
-    list-style-type: none;
-    padding: 0;
-  }
-
-  .template-links li {
-    margin: 6px 0;
-  }
-
-  .separator {
-    text-align: center;
-    color: #999;
-    pointer-events: none;
+  .template-separator {
+    border: 0;
+    height: 1px;
+    background: #ccc;
+    margin: 10px 0;
   }
 </style>
-
 </body>
 </html>
