--- a/organizers.html
+++ b/organizers.html
@@ -87,11 +87,11 @@
 
         <!-- Logos -->
         <div class="footer-logos">
-          <img id="logo1" src="images/university_of_galway.png" alt="Logo 1" />
-          <img id="logo2" src="images/Sri_Sivasubramaniya_Nadar_College_of_Engineering.svg.png" alt="Logo 2" />
-          <img id="logo3" src="images/SRM_Institute_of_Science_and_Technology_Logo.svg.png" alt="Logo 3" />
-          <img id="logo4" src="images/Yenepoya.png" alt="Logo 4" />
-        </div>
+  <div class="logo-box"><img src="images/university_of_galway.png" alt="Logo 1" /></div>
+  <div class="logo-box"><img src="images/Sri_Sivasubramaniya_Nadar_College_of_Engineering.svg.png" alt="Logo 2" /></div>
+  <div class="logo-box"><img src="images/SRM_Institute_of_Science_and_Technology_Logo.svg.png" alt="Logo 3" /></div>
+  <div class="logo-box"><img src="images/Yenepoya.png" alt="Logo 4" /></div>
+</div>
 
         <!-- Copyright -->
         <p class="footer-copy">
