--- a/keynote.html
+++ b/keynote.html
@@ -1,69 +1,73 @@
-<!DOCTYPE html><html lang='en'>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Keynote | Dravidian 2025</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-<header class="navbar">
+<body>
+
+  <!-- Header -->
   <header class="navbar">
     <div class="container navbar-container">
       <div class="brand">
         <img src="images/dravidian-code-mixed-logo.png" alt="DravidianCodeMix Logo" class="logo-img" />
         <h1 class="site-title">DravidianCodeMix 2025</h1>
       </div> 
-    <nav class="nav-menu">
-      <a href="overview.html">Overview</a>
-      <a href="keynote.html">Keynote</a>
-      <a href="dataset.html">Dataset</a>
-      <a href="dates.html">Timeline</a>
-      <a href="organizers.html">Organizers</a>
-      <a href="submission.html">Submission</a>
-      <div class="dropdown">
-        <a href="#" class="dropbtn">Previous Year</a>
-        <div class="dropdown-content">
-          <a href="https://dravidian-codemix.github.io/2020/">2020</a>
-          <a href="https://dravidian-codemix.github.io/2021/index.html">2021</a>
-          <a href="https://sites.google.com/view/dravidiancodemix-2022/home?authuser=0">2022</a>
-          <a href="https://sites.google.com/view/dravidian-codemix-fire-2023/home?authuser=0">2023</a>
-          <a href="https://sites.google.com/view/dravidian-codemix-fire2024/home">2024</a>
+      <nav class="nav-menu">
+        <a href="overview.html">Overview</a>
+        <a href="keynote.html">Keynote</a>
+        <a href="dataset.html">Dataset</a>
+        <a href="dates.html">Timeline</a>
+        <a href="organizers.html">Organizers</a>
+        <a href="submission.html">Submission</a>
+        <div class="dropdown">
+          <a href="#" class="dropbtn">Previous Year</a>
+          <div class="dropdown-content">
+            <a href="https://dravidian-codemix.github.io/2020/">2020</a>
+            <a href="https://dravidian-codemix.github.io/2021/index.html">2021</a>
+            <a href="https://sites.google.com/view/dravidiancodemix-2022/home?authuser=0">2022</a>
+            <a href="https://sites.google.com/view/dravidian-codemix-fire-2023/home?authuser=0">2023</a>
+            <a href="https://sites.google.com/view/dravidian-codemix-fire2024/home">2024</a>
+          </div>
         </div>
-      </div>
-    </nav>
-  </div>
-</header>
-<section class="coming-soon">
-  <div class="container">
-    <h1 class="coming-title">Coming Soon</h1>
-    <p class="coming-subtitle">This page is under construction. Stay tuned!</p>
-  </div>
-</section>
-<footer class="footer">
-  <div class="container footer-container">
-    <!-- Logos -->
-    <footer class="footer">
-      <div class="container footer-container">
-        <!-- Emails -->
-        <div class="footer-emails">
-          <p>Email:</p>
-          <a href="mailto:dravidiancodemixed@gmail.com">dravidiancodemixed@gmail.com</a> |
-          <a href="mailto:bharathiraja.akr@gmail.com">bharathiraja.akr@gmail.com</a>
-        </div>
+      </nav>
+    </div>
+  </header>
 
-        <!-- Logos -->
+  <!-- Main Content -->
+  <section class="coming-soon">
+    <div class="container">
+      <h1 class="coming-title">Coming Soon</h1>
+      <p class="coming-subtitle">This page is under construction. Stay tuned!</p>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="footer">
+    <div class="container footer-container">
+      <!-- Emails -->
+      <div class="footer-emails">
+        <p>Email:</p>
+        <a href="mailto:dravidiancodemixed@gmail.com">dravidiancodemixed@gmail.com</a> |
+        <a href="mailto:bharathiraja.akr@gmail.com">bharathiraja.akr@gmail.com</a>
+      </div>
+
+      <!-- Logos -->
       <div class="footer-logos">
-  <div class="logo-box"><img src="images/university_of_galway.png" alt="Logo 1" /></div>
-  <div class="logo-box"><img src="images/Sri_Sivasubramaniya_Nadar_College_of_Engineering.svg.png" alt="Logo 2" /></div>
-  <div class="logo-box"><img src="images/SRM_Institute_of_Science_and_Technology_Logo.svg.png" alt="Logo 3" /></div>
-  <div class="logo-box"><img src="images/Yenepoya.png" alt="Logo 4" /></div>
-</div>
-
-
-        <!-- Copyright -->
-        <p class="footer-copy">
-          © 2025 DravidianCodeMix Track. All rights reserved.
-        </p>
+        <div class="logo-box"><img src="images/university_of_galway.png" alt="Logo 1" /></div>
+        <div class="logo-box"><img src="images/Sri_Sivasubramaniya_Nadar_College_of_Engineering.svg.png" alt="Logo 2" /></div>
+        <div class="logo-box"><img src="images/SRM_Institute_of_Science_and_Technology_Logo.svg.png" alt="Logo 3" /></div>
+        <div class="logo-box"><img src="images/Yenepoya.png" alt="Logo 4" /></div>
       </div>
-    </footer>
-</footer>
-</body></html>
+
+      <!-- Copyright -->
+      <p class="footer-copy">
+        © 2025 DravidianCodeMix Track. All rights reserved.
+      </p>
+    </div>
+  </footer>
+
+</body>
+</html>
