--- a/organizers.html
+++ b/organizers.html
@@ -68,7 +68,7 @@
       <p><a href="#">Parameshwar R. Hegde</a><br><small>YIASCM, Yenepoya (Deemed to be University), Mangalore, India</small></p>
     </li>
     <li>
-      <img src="images/deepthi.jpg" alt="Deepthi Vikram">
+      <img src="images/Deepthi.jpg" alt="Deepthi Vikram">
       <p><a href="#">Deepthi Vikram</a><br><small>YIASCM, Yenepoya (Deemed to be University), Mangalore, India</small></p>
     </li>
   </ul>
