--- a/organizers.html
+++ b/organizers.html
@@ -52,7 +52,7 @@
       <p><a href="#">Bharathi B</a><br><small>SSN College of Engineering, Tamil Nadu, India</small></p>
     </li>
     <li>
-      <img src="images/Prasanna.jpg" alt="Prasanna Kumar Kumaresan">
+      <img src="images/prasanna.jpg" alt="Prasanna Kumar Kumaresan">
       <p><a href="#">Prasanna Kumar Kumaresan</a><br><small>University of Galway, Ireland</small></p>
     </li>
     <li>
