--- a/dates.html
+++ b/dates.html
@@ -1,9 +1,10 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html><html lang='en'>
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dates | Dravidian 2025</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
 <header class="navbar">
 <header class="navbar">
@@ -12,7 +13,10 @@
         <img src="images/dravidian-code-mixed-logo.png" alt="DravidianCodeMix Logo" class="logo-img" />
         <h1 class="site-title">DravidianCodeMix 2025</h1>
       </div> 
-    <nav class="nav-menu">
+      <button class="menu-toggle" onclick="toggleMenu()">
+        <i class="fas fa-bars"></i>
+      </button>
+    <nav class="nav-menu" id="navLinks">
       <a href="overview.html">Overview</a>
       <a href="keynote.html">Keynote</a>
       <a href="dataset.html">Dataset</a>
@@ -42,12 +46,12 @@
         <span class="legend-item next-up">Upcoming Events</span>
       </div>           
       <ul class="timeline">
-        <li data-date="2025-05-15">2025-05-15 : Open track websites and training data release</li>
-        <li data-date="2025-06-15">2025-06-15 : Test data release</li>
-        <li data-date="2025-06-30">2025-06-30 : Run submission deadline</li>
-        <li data-date="2025-07-15">2025-07-15 : Results declared</li>
-        <li data-date="2025-08-30">2025-08-30 : Working notes due</li>
-        <li data-date="2025-09-30">2025-09-30 : Camera ready copies of working notes and overview paper due</li>
+        <li data-date="2025-05-10">2025-05-10 Open track websites and training data release</li>
+        <li data-date="2025-06-15">2025-06-15 Test data release</li>
+        <li data-date="2025-06-30">Run submission deadline</li>
+        <li data-date="2025-07-15">Results declared</li>
+        <li data-date="2025-08-30">Working notes due</li>
+        <li data-date="2025-09-30">Camera ready copies of working notes and overview paper due</li>
         <li data-date="2025-12-01">Tentatively December 2025</li>
       </ul>
     </div>
@@ -82,20 +86,24 @@
     <footer class="footer">
       <div class="container footer-container">
         <!-- Emails -->
-        <div class="footer-emails">
-          <p>Email:</p>
-          <a href="mailto:dravidiancodemixed@gmail.com">dravidiancodemixed@gmail.com</a> |
-          <a href="mailto:bharathiraja.akr@gmail.com">bharathiraja.akr@gmail.com</a>
-        </div>
+            <div class="footer-emails">
+              <p>Email:</p>
+              <p>
+                <i class="fa-solid fa-envelope" style="color: #d93025;"></i>
+                <a href="mailto:dravidiancodemixed@gmail.com">dravidiancodemixed@gmail.com</a>
+                |
+                <i class="fa-solid fa-envelope" style="color: #d93025;"></i>
+                <a href="mailto:bharathiraja.akr@gmail.com">bharathiraja.akr@gmail.com</a>
+              </p>
+            </div>
 
         <!-- Logos -->
-       <div class="footer-logos">
+     <div class="footer-logos">
   <div class="logo-box"><img src="images/university_of_galway.png" alt="Logo 1" /></div>
   <div class="logo-box"><img src="images/Sri_Sivasubramaniya_Nadar_College_of_Engineering.svg.png" alt="Logo 2" /></div>
   <div class="logo-box"><img src="images/SRM_Institute_of_Science_and_Technology_Logo.svg.png" alt="Logo 3" /></div>
   <div class="logo-box"><img src="images/Yenepoya.png" alt="Logo 4" /></div>
 </div>
-
 
         <!-- Copyright -->
         <p class="footer-copy">
@@ -103,8 +111,11 @@
         </p>
       </div>
     </footer>
-  </div>
 </footer>
-<!-- </body> -->
-</header>
-</html>
+<script>
+    function toggleMenu() {
+      const nav = document.getElementById("navLinks");
+      nav.classList.toggle("active");
+    }
+  </script>
+</body></html>
