--- a/dataset.html
+++ b/dataset.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang='en'>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -42,8 +42,18 @@
   <div class="container">
     <h2>Dataset</h2>
     <p>The data is in the following format:</p>
-    <pre><code>Comment label
-actor na pudar surendra bantwal.thulunaddha maryadi depwer non-offensive</code></pre>
+    <table border="1">
+      <tr>
+        <th>Label</th>
+        <th>Comment</th>
+      </tr>
+      <tr>
+        <td>actor</td>
+        <td>na pudar surendra bantwal.thulunaddha maryadi depwer non-offensive</td>
+      </tr>
+    </table>
+    <!-- <pre><code>Comment label
+actor na pudar surendra bantwal.thulunaddha maryadi depwer non-offensive</code></pre> -->
 
     <h3>Languages</h3>
     <table class="dataset-table">
