dataset files changes

--- a/dataset.html
+++ b/dataset.html
@@ -108,11 +108,11 @@ actor na pudar surendra bantwal.thulunaddha maryadi depwer non-offensive</code><
       </a>
     </p>
     <p>
-      Participants are required to submit the predicted data in a tab-separated single file named <code>predictions.tsv</code>. The <code>predictions.tsv</code> file should have two columns named <strong>Comment</strong> (text) and <strong>class label</strong>.
+      Participants are required to submit the predicted data in a tab-separated single file named <code>predictions.csv</code>. The <code>predictions.csv</code> file should have columns named <strong>ID</strong> (if it is there in the dataset) and <strong>class label</strong> (predictions).
     </p>
     <p>
-      To get the full data, register at Codalab:
-      <a href="#" target="_blank">To be announced</a>
+      To get the full data, register at <strong>Codabench</strong>
+      <a href="https://www.codabench.org/competitions/8494/" target="_blank">https://www.codabench.org/competitions/8494/</a>
     </p>
   </div>
 </section>
