changes in datase

--- a/dataset.html
+++ b/dataset.html
@@ -44,12 +44,12 @@
     <p>The data is in the following format:</p>
     <table border="1">
       <tr>
-        <th>Label</th>
         <th>Comment</th>
+        <th>Label</th>
       </tr>
       <tr>
-        <td>actor</td>
-        <td>na pudar surendra bantwal.thulunaddha maryadi depwer non-offensive</td>
+        <td>actor na pudar surendra bantwal.thulunaddha maryadi depwer</td>
+        <td>non-offensive</td>
       </tr>
     </table>
     <!-- <pre><code>Comment label
