changes in organizers

--- a/dataset.html
+++ b/dataset.html
@@ -110,8 +110,8 @@ actor na pudar surendra bantwal.thulunaddha maryadi depwer non-offensive</code><
     <p>
       Participants are required to submit the predicted data in a tab-separated single file named <code>predictions.csv</code>. The <code>predictions.csv</code> file should have columns named <strong>ID</strong> (if it is there in the dataset) and <strong>class label</strong> (predictions).
     </p>
-    <p>
-      To get the full data, register at <strong>Codabench</strong>
+    <p style="color: red;">
+      To get the full data, register at <strong>Codabench:</strong>
       <a href="https://www.codabench.org/competitions/8494/" target="_blank">https://www.codabench.org/competitions/8494/</a>
     </p>
   </div>
