--- a/organizers.html
+++ b/organizers.html
@@ -41,39 +41,39 @@
   <ul>
     <li>
       <img src="images/bharathiraja.jpg" alt="Bharathi Raja Chakravarthi">
-      <p><a href="#">Bharathi Raja Chakravarthi</a><br><small>University of Galway, Ireland</small></p>
+      <p><a href="https://www.universityofgalway.ie/science-engineering/staff-profiles/bharathiraja/">Bharathi Raja Chakravarthi</a><br><small>University of Galway, Ireland</small></p>
     </li>
     <li>
       <img src="images/Sripriya.jpeg" alt="Sripriya N">
-      <p><a href="#">Sripriya N</a><br><small>SSN College of Engineering, Tamil Nadu, India</small></p>
+      <p><a href="https://www.ssn.edu.in/staff-members/dr-n-sripriya/">Sripriya N</a><br><small>SSN College of Engineering, Tamil Nadu, India</small></p>
     </li>
     <li>
       <img src="images/thenmozhi.jpg" alt="Thenmozhi D">
-      <p><a href="#">Thenmozhi D</a><br><small>SSN College of Engineering, Tamil Nadu, India</small></p>
+      <p><a href="https://www.ssn.edu.in/staff-members/dr-d-thenmozhi/">Thenmozhi D</a><br><small>SSN College of Engineering, Tamil Nadu, India</small></p>
     </li>
     <li>
       <img src="images/bharathi.jpg" alt="Bharathi B">
-      <p><a href="#">Bharathi B</a><br><small>SSN College of Engineering, Tamil Nadu, India</small></p>
+      <p><a href="https://www.ssn.edu.in/staff-members/dr-b-bharathi/">Bharathi B</a><br><small>SSN College of Engineering, Tamil Nadu, India</small></p>
     </li>
     <li>
       <img src="images/prasanna.jpg" alt="Prasanna Kumar Kumaresan">
-      <p><a href="#">Prasanna Kumar Kumaresan</a><br><small>University of Galway, Ireland</small></p>
+      <p><a href="https://www.linkedin.com/in/prasannakumar04/">Prasanna Kumar Kumaresan</a><br><small>University of Galway, Ireland</small></p>
     </li>
     <li>
       <img src="images/Subalalitha.jpg" alt="Subalalitha">
-      <p><a href="#">Subalalitha</a><br><small>SRMIST, Tamil Nadu, India</small></p>
+      <p><a href="https://www.srmist.edu.in/faculty/subalalitha-c-n/">Subalalitha</a><br><small>SRMIST, Tamil Nadu, India</small></p>
     </li>
     <li>
       <img src="images/Anusha.jpg" alt="Anusha M D">
-      <p><a href="#">Anusha M D</a><br><small>YIASCM, Yenepoya (Deemed to be University), Mangalore, India</small></p>
+      <p><a href="https://scholar.google.com/citations?user=SOsmjpwAAAAJ&hl=en">Anusha M D</a><br><small>YIASCM, Yenepoya (Deemed to be University), Mangalore, India</small></p>
     </li>
     <li>
       <img src="images/Parameshwar_R_Hegde.jpg" alt="Parameshwar R. Hegde">
-      <p><a href="#">Parameshwar R. Hegde</a><br><small>YIASCM, Yenepoya (Deemed to be University), Mangalore, India</small></p>
+      <p><a href="https://www.linkedin.com/in/parameshwar-r-hegde-phd-05944a8a/">Parameshwar R. Hegde</a><br><small>YIASCM, Yenepoya (Deemed to be University), Mangalore, India</small></p>
     </li>
     <li>
       <img src="images/Deepthi.jpg" alt="Deepthi Vikram">
-      <p><a href="#">Deepthi Vikram</a><br><small>YIASCM, Yenepoya (Deemed to be University), Mangalore, India</small></p>
+      <p><a href="https://www.linkedin.com/in/deepthi-vikram-3a17451a0/">Deepthi Vikram</a><br><small>YIASCM, Yenepoya (Deemed to be University), Mangalore, India</small></p>
     </li>
   </ul>
 </section>
