--- a/organizers.html
+++ b/organizers.html
@@ -56,7 +56,7 @@
       <p><a href="https://www.ssn.edu.in/staff-members/dr-b-bharathi/">Bharathi B</a><br><small>SSN College of Engineering, Tamil Nadu, India</small></p>
     </li>
     <li>
-      <img src="images/prasanna.jpg" alt="Prasanna Kumar Kumaresan">
+      <img src="images\Prasanna new pic.jpg" alt="Prasanna Kumar Kumaresan">
       <p><a href="https://www.linkedin.com/in/prasannakumar04/">Prasanna Kumar Kumaresan</a><br><small>University of Galway, Ireland</small></p>
     </li>
     <li>
