--- a/submission.html
+++ b/submission.html
@@ -47,8 +47,8 @@
       <h4 class="section-title">Paper Submission</h4>
       <p>
         The paper (Sentiment Analysis for Dravidian Languages in Code-Mixed Text) name format should be:<br>
-        <strong>TEAM_NAME@Dravidian-CodeMix-FIRE2020: Title of the paper</strong>.<br>
-        For example: NUIG_ULD@Dravidian-CodeMix-FIRE2020: Sentiment Analysis on Multilingual Code Mixing Text.
+        <strong style="color: red;">TEAM_NAME@DravidianCodeMix 2025: Title of the paper</strong>.<br>
+        For example: <span style="color: red;">NUIG_ULD@DravidianCodeMix 2025: Sentiment Analysis on Multilingual Code Mixing Text.</span>
       </p>
 
       <h1 class="subheading">General Guidelines:</h1>
