--- a/overview.html
+++ b/overview.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang='en'>
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
@@ -153,6 +153,7 @@
             </p>
           </div>
         </footer>
+      </div>
     </footer>
     <script>
       function toggleMenu() {
@@ -161,5 +162,5 @@
       }
     </script>
   </body>
-
+</header>
 </html>
