--- a/dates.html
+++ b/dates.html
@@ -50,7 +50,7 @@
         <li data-date="2025-06-15">2025-06-15 Test data release</li>
         <li data-date="2025-06-30">2025-06-30 Run submission deadline</li>
         <li data-date="2025-07-15">2025-07-15 Results declared</li>
-        <li data-date="2025-08-30">2025-08-30 Working notes due</li>
+        <li data-date="2025-09-05"><s>2025-08-30</s><b> Extended to 2025-09-05</b> Working notes due</li>
         <li data-date="2025-09-30">2025-09-30 Camera ready copies of working notes and overview paper due</li>
         <li data-date="2025-12-01">Tentatively December 2025</li>
       </ul>
