--- a/submission.html
+++ b/submission.html
@@ -45,9 +45,9 @@
     <div class="container">
       <h4 class="section-title">Paper Submission</h4>
       <p>
-        The paper (Sentiment Analysis for Dravidian Languages in Code-Mixed Text) name format should be:<br>
+        The paper (Offensive Language Identification in Dravidian Code-Mixed Languages) name format should be:<br>
         <strong style="color: red;">TEAM_NAME@DravidianCodeMix 2025: Title of the paper</strong>.<br>
-        For example: <span style="color: red;">NUIG_ULD@DravidianCodeMix 2025: Sentiment Analysis on Multilingual Code Mixing Text.</span>
+        For example: <span style="color: red;">NUIG_ULD@DravidianCodeMix 2025: Offensive Language Identification in Dravidian Code-Mixed Languages</span>
       </p>
 
       <h1 class="subheading">General Guidelines:</h1>
